adding pic for contact section

--- a/index.html
+++ b/index.html
@@ -190,11 +190,11 @@
       						<p>The internet of Things is the internetworking of physical devices, vehicles (also referred as Connected Devices and Smart Devices), buildings and other items- embedded with electronics, software, sensors and network connectivity that enable these  objects to collect.  This IoT project enabled for B2B customers with different third party vendors like Mobile Iron, Grid Wide, VZ Share, Intelligent Hospital and etc. with different services like Device with Service, Software, Professional Services, Hardware only. </p>
 						<br><strong>Contribution	:</strong><br>
 						<ul>
-  							<li>•	Worked for integration of IoT project with B2B Channel in POS using Java, Web Technologies.</li>
-  							<li>•	Developed a common solution for SPOC Email Generation with IoT products, so that other channel(B2B, Care, Retail and TeleSales) can use with minimal changes using Java Technologies.</li>
-  							<li>•	Developed Order Maintenance Transactions and its Spoc Approvals  for Business Customers.</li>
-							<li>•	Proposed and developed a common solution for displaying Terms and conditions for all channels across the project.</li>
-							<li>•	Took responsibility to enable IoT solutions for Retail and Care Channels.</li>
+  							<li>â€¢	Worked for integration of IoT project with B2B Channel in POS using Java, Web Technologies.</li>
+  							<li>â€¢	Developed a common solution for SPOC Email Generation with IoT products, so that other channel(B2B, Care, Retail and TeleSales) can use with minimal changes using Java Technologies.</li>
+  							<li>â€¢	Developed Order Maintenance Transactions and its Spoc Approvals  for Business Customers.</li>
+							<li>â€¢	Proposed and developed a common solution for displaying Terms and conditions for all channels across the project.</li>
+							<li>â€¢	Took responsibility to enable IoT solutions for Retail and Care Channels.</li>
 						</ul>	
     				</div>
 				<div id="posWS" class="col s12">
@@ -232,7 +232,7 @@
 						</ul>
     					</div>
 					<div id="eRating" class="col s12">
-      						Kewill Rating is the perfect web based solution for giving quotes for customers depending upon the tariff’s and contracts which agreed by the service providers. It is also compatible with any other fright forward applications for providing rates. It is well synchronized to give visibility for quotes contracts and tariffs. Kewill Rating is a Rate Management System, Which gives all the information on rates of freight services providers in moving their customer’s shipments.
+      						Kewill Rating is the perfect web based solution for giving quotes for customers depending upon the tariffâ€™s and contracts which agreed by the service providers. It is also compatible with any other fright forward applications for providing rates. It is well synchronized to give visibility for quotes contracts and tariffs. Kewill Rating is a Rate Management System, Which gives all the information on rates of freight services providers in moving their customerâ€™s shipments.
 
 						<br><strong>Contribution	:</strong><br>
 						<ul style="list-style-type:circle">
@@ -347,7 +347,7 @@
 				<div class="row">
     					<div class="col s4">
 						<div class="center-align-text">
-      						<div class="contact-user" style="background-image:url('C:/Users/Chinnodu/Desktop/portfolio/profilePic.jpg')"></div>
+      						<div class="contact-user" style="background-image:url('images/profilePic.jpg')"></div>
 						</div>
     					</div>
     					<div class="col s8">
