--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 				<div class="row">
     					<div class="col s4">
 						<div class="center-align-text">
-      						<div class="contact-user" style="background-image:url('images/profilePic.jpg')"></div>
+      						<div class="contact-user" style="background-image:url('images\profilePic.jpg')"></div>
 						</div>
     					</div>
     					<div class="col s8">
