--- a/index.html
+++ b/index.html
@@ -366,11 +366,11 @@
                     					<i class="fa fa-envelope-o email" aria-hidden="true"><span class="iconLabel"></span><a class="mail" href="mailto:nagarjunakuppala07@gmail.com">nagarjunakuppala07@gmail.com</span></a></i>
 							<br>
 							<div class="degree" id="degree">
-                        					<a href="https://drive.google.com/file/d/0B87C0zj1lwIJaDNBdV95cDVWVW8/view?usp=sharing" target="_blank">Resume</a>
+                        					<a href="https://drive.google.com/" target="_blank">Resume</a>
                     					</div>
                     					<br>
                     					<div class="degree" id="degree">
-                        					<a href="https://drive.google.com/file/d/0B87C0zj1lwIJVjkta3FzZmJxNTQ/view?usp=sharing" target="_blank">Infographic Resume</a>
+                        					<a href="https://drive.google.com/" target="_blank">Infographic Resume</a>
                     					</div>
 							<div class="icons">
                         					<ul class="social-network social-circle">
@@ -378,7 +378,7 @@
                                 						<a class="icoFacebook" href="https://www.facebook.com/nagarjunakuppala" title="Facebook"><i class="fa fa-facebook"></i></a>
                             						</li>
                             						<li>
-                                						<a class="icoGithub" href="https://github.com/nagarjunakuppala" title="Github"><i class="fa fa-github"></i></a>
+                                						<a class="icoGithub" href="https://github.com/nagarjunakuppala/portfolio/" title="Github"><i class="fa fa-github"></i></a>
                             						</li>
                             						<li>
                                 						<a class="icoLinkedin" href="https://www.linkedin.com/in/nagarjunakuppala/" title="Linkedin"><i class="fa fa-linkedin"></i></a>
