--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 				<div class="row">
     					<div class="col s4">
 						<div class="center-align-text">
-      						<div class="contact-user" style="background-image:url('images\profilePic.jpg')"></div>
+      						<div class="contact-user" style="background-image:url('\images\profilePic.jpg')"></div>
 						</div>
     					</div>
     					<div class="col s8">
@@ -378,7 +378,7 @@
                                 						<a class="icoFacebook" href="https://www.facebook.com/nagarjunakuppala" title="Facebook"><i class="fa fa-facebook"></i></a>
                             						</li>
                             						<li>
-                                						<a class="icoGithub" href="https://github.com/nagarjunakuppala/portfolio/" title="Github"><i class="fa fa-github"></i></a>
+                                						<a class="icoGithub" href="https://nagarjunakuppala.github.io/portfolio/" title="Github"><i class="fa fa-github"></i></a>
                             						</li>
                             						<li>
                                 						<a class="icoLinkedin" href="https://www.linkedin.com/in/nagarjunakuppala/" title="Linkedin"><i class="fa fa-linkedin"></i></a>
