--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
       						<p>POS Web services layer provides the services for different channels such as Retail, Dotcom, B2B, Care, Telesales. It is the middleware between ATG (for user interface) and Backend (for database connectivity).</p>
 						<br><strong>Contribution	:</strong><br>
 						<ul style="list-style-type:circle">
-  							<li>Developed code by adhering to best practices and standards of DevOps Tools such as Sonar Lint for coding standards and HP fortify for security related standards.</li>
-  							<li>Implemented Restful web services for integration of different applications like Vision, MCS, ATG, etc.</li>
-  							<li>Defect Fixing (Unit Testing and System Testing)</li>
-							<li>Performed debugging, analyzed the root cause and fixed the defects during maintenance of the project.</li>
+  							<li>•	Developed code by adhering to best practices and standards of DevOps Tools such as Sonar Lint for coding standards and HP fortify for security related standards.</li>
+  							<li>•	Implemented Restful web services for integration of different applications like Vision, MCS, ATG, etc.</li>
+  							<li>•	Defect Fixing (Unit Testing and System Testing)</li>
+							<li>•	Performed debugging, analyzed the root cause and fixed the defects during maintenance of the project.</li>
 						</ul>	
     				</div>
 				<div id="eTrans" class="col s12">
@@ -232,12 +232,12 @@
 							with various Financial Systems, Customs and Cargo Community Centers.
 							<br><strong>Contribution	:</strong><br>
 						<ul style="list-style-type:circle">
-  							<li>Involved in analyzing the requirements from CR and DTD documents.</li>
-  							<li>Involved in developing the user interfaces with JSP and Servlets.</li>
-  							<li>Involved in handling client side and server side data validations and structuring the application using Java Script, HTML and Ajax.</li>
-							<li>Developed the server side and business logic implementation using J2EE technologies like servlets, JDBC and exposure to EJB.</li>
-								<li>Developed customized reports using Clear Reports.</li>
-							<li>Participating in WebEx sessions with clients/Support in the process of bug fixing.</li>
+  							<li>•	Involved in analyzing the requirements from CR and DTD documents.</li>
+  							<li>•	Involved in developing the user interfaces with JSP and Servlets.</li>
+  							<li>•	Involved in handling client side and server side data validations and structuring the application using Java Script, HTML and Ajax.</li>
+							<li>•	Developed the server side and business logic implementation using J2EE technologies like servlets, JDBC and exposure to EJB.</li>
+								<li>•	Developed customized reports using Clear Reports.</li>
+							<li>•	Participating in WebEx sessions with clients/Support in the process of bug fixing.</li>
 						</ul>
     					</div>
 					<div id="eRating" class="col s12">
@@ -245,12 +245,12 @@
 
 						<br><strong>Contribution	:</strong><br>
 						<ul style="list-style-type:circle">
-  							<li>Involved in writing Restful web services to integrate with other applications.</li>
-  							<li>Involved in analyzing the requirements from CR and DTD documents.</li>
-  							<li>Developed the server side and business logic implementation using J2EE technologies like servlets, JDBC.</li>
-							<li>Involved in developing the user interfaces with JSP, HTML and data validations using java script.</li>
-								<li>Implemented customized quote reports in jasper reports tool.</li>
-							<li>Involved in Unit Level Testing and preparing Unit Level Test cases and UTE Documents.</li>
+  							<li>•	Involved in writing Restful web services to integrate with other applications.</li>
+  							<li>•	Involved in analyzing the requirements from CR and DTD documents.</li>
+  							<li>•	Developed the server side and business logic implementation using J2EE technologies like servlets, JDBC.</li>
+							<li>•	Involved in developing the user interfaces with JSP, HTML and data validations using java script.</li>
+								<li>•	Implemented customized quote reports in jasper reports tool.</li>
+							<li>•	Involved in Unit Level Testing and preparing Unit Level Test cases and UTE Documents.</li>
 						</ul>	
 
     					</div>
@@ -365,7 +365,7 @@
 				<div class="row">
     					<div class="col s4">
 						<div class="center-align-text">
-      						<div class="user" style="background-image:url('images/profilePic.jpg')"/>
+      						<div class="contact-user" style="background-image:url('images/profilePic.jpg')"/>
 						</div>
     					</div>
     					<div class="col s8">
