--- a/index.html
+++ b/index.html
@@ -363,12 +363,12 @@
 			<h5 class="top-buffer">Get In Touch</h5><br><br>
 			<div class="card-content">
 				<div class="row">
-    					<div class="col s4">
+    					<div class="col s12 m4 l4">
 						<div class="center-align-text">
       						<div class="contact-user" style="background-image:url('images/profilePic.jpg')"/>
 						</div>
     					</div>
-    					<div class="col s8">
+    					<div class="col s12 m8 l4">
       						<p>Nagarjuna Kuppala</p>
                     				<p>VDSI, Titus, Bulding #10, Raheja Mind Space, Madhapur, Hyderabad-500081</p><i class="fa fa-phone"><span class="iconLabel"> +91 9959216483</span></i>
                     				</br>
