--- a/index.html
+++ b/index.html
@@ -289,6 +289,19 @@
 						</div>
 
     					</div><br>
+					<div class="row">
+						<div class="col s12 m6 l6">
+      							<div class="item-inner" id="rcorners">
+								<div class="progress">
+  									<div class="determinate" style="width: 90%"><p class="center-align-text">90%</p></div>
+								</div>
+								<div class="course">
+                            						<b>Webservices</b>
+                        					</div>
+                        					<div class="time">Advanced, 4 Years</div>
+							</div>
+						</div>
+					</div><br>
 					<h5 class="center-align-text education-body">Secondary Skills</h5><br>
 					<div class="row">
 						<div class="col s12 center-align-text">
