--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
 				<h5>System Analyst Dev</h5>
 			</div><br><br>
 			<div class="row">
-				<div class="col s8 m2 8 center-align">
+				<div class="col s12 center-align">
 				
 				</div>
-				<div class="col s8 m8 8 center-align">
+				<div class="col s12 center-align">
 					<p>Experienced Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Java, SQL, PL&SQL, Oracle Database, AngularJS, DevOPs, Webservices, Spring and Agile Methodologies. Strong engineering professional with a Bachelor of Technology (B.Tech.) focused in Computer Science and Engineering from JawaharLal Nehru Technological University, Hyderabad.</p>
 
 					<br>
 				</div>
-				<div class="col s8 m2 8 center-align">
+				<div class="col s12 center-align">
 				
 				</div>
 			</div>
