--- a/index.html
+++ b/index.html
@@ -398,11 +398,11 @@
                     					<i class="fa fa-envelope-o email" aria-hidden="true"><span class="iconLabel"></span><a class="mail" href="mailto:nagarjunakuppala07@gmail.com">nagarjunakuppala07@gmail.com</span></a></i>
 							<br>
 							<div class="degree" id="degree">
-                        					<a href="https://drive.google.com/" target="_blank">Resume</a>
+                        					<a href="https://drive.google.com/open?id=0B0CyErOY_eOBY3lJbzNTbVN0QWM" target="_blank">Resume</a>
                     					</div>
                     					<br>
                     					<div class="degree" id="degree">
-                        					<a href="https://drive.google.com/" target="_blank">Infographic Resume</a>
+                        					<a href="https://drive.google.com/open?id=0B0CyErOY_eOBY3lJbzNTbVN0QWM" target="_blank">Infographic Resume</a>
                     					</div>
 							<div class="icons">
                         					<ul class="social-network social-circle">
