--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 				<div class="row">
     					<div class="col s12 m4 l4">
 						<div class="center-align-text">
-      						<div class="contact-user" style="background-image:url('images/profilePic.jpg')"/>
+							<div class="contact-user" style="background-image:url('images/profilePic.jpg')"></div>
 						</div>
     					</div>
     					<div class="col s12 m8 l4">
@@ -426,7 +426,7 @@
 			</div>
 
 			
-		
+	</div>
 
 	<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
 		<a class="btn-floating btn-large red" href="#home"> <i
