--- a/index.html
+++ b/index.html
@@ -336,8 +336,7 @@
   						<div class="left-align"> 
   							<blockquote> 
                             					<i class="fa fa-quote-left"></i>                            
-                            					<p>I have known and worked with Nagarjuna for more than 3 years. He has demonstrated good potential and technical skills when worked at Kewill in e-Trans product. The characteristics that attracts my attention is that he is proactive and a quick leaner. Although a junior member while working on the e-Trans project, measured by his tenure, he quickly established himself as a good techno-functional person in the product. His combination of intelligence, commitment, perseverance will certainly make him a valuable member of any team. I wish him all the best</p>
-								<i class="fa fa-quote-right"></i>
+                            					<p>I have known and worked with Nagarjuna for more than 3 years. He has demonstrated good potential and technical skills when worked at Kewill in e-Trans product. The characteristics that attracts my attention is that he is proactive and a quick leaner. Although a junior member while working on the e-Trans project, measured by his tenure, he quickly established himself as a good techno-functional person in the product. His combination of intelligence, commitment, perseverance will certainly make him a valuable member of any team. I wish him all the best.  <i class="fa fa-quote-right"></i></p>
                         				</blockquote> 
 						</div> 
 						<div class="right-align-text">  
