--- a/index.html
+++ b/index.html
@@ -537,6 +537,10 @@
 	<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 	<script src="js/materialize.js"></script>
 	<script src="js/init.js"></script>
+	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+
+ 	<!-- Compiled and minified JavaScript -->
+ 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 <script>
 
 var slideIndex = 1;
