updating the contact info

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 					<div class="col s12">
 						<div class="center-align-text">
 							<p>Nagarjuna Kuppala</p>
-                    					<p>VDSI, Titus, Bulding #10, Raheja Mind Space, Madhapur, Hyderabad-500081</p><i class="fa fa-phone"><span class="iconLabel"> 001 (346)400-6295</span></i>
+                    					<p>Apt #1903, Cove Apartments, 2001 Gemini Street, Houston, Texas-77058</p><i class="fa fa-phone"><span class="iconLabel">(346)400-6295</span></i>
                     					<br>
                         
                     					<i class="fa fa-envelope-o email" aria-hidden="true"><a class="mail" href="mailto:nagarjunakuppala07@gmail.com"><span class="iconLabel">nagarjunakuppala07@gmail.com</span></a></i>
