--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 
 		<div class="footer-copyright">
 			<div class="container">
-				Made by <a class="orange-text text-lighten-3" href="nag.com">Nagarjuna Kuppala</a>
+				Made by <a class="orange-text text-lighten-3" href="nag.com">Nagarjuna Kupppala</a>
 			</div>
 		</div>
 	</footer>
