--- a/index.html
+++ b/index.html
@@ -96,17 +96,22 @@
 					<div class="row">
 						<div class="col s12 m6 l4">
       							<div class="item-inner">
-								<h3 class="degree"><b>GRE</b></h3>
-								<div class="education-body">
-                            						294
+                        					<h3 class="degree"><b>Bachelor of Technology</b></h3>
+								<div class="course">
+                            						Computer Science Engineering
                         					</div>
-								<div class="time">
-									Quant: 157
-									Verbal: 138
-									AWA: 2.5
+                        					<div class="education-body">
+                            						Jawaharlal Nehru Technologcal University, Hyderabad.
+                        					</div><!--//education-body-->
+                        					<div class="time">2007 - 2011</div>
+                        					<div class="desc">
+									<ul>
+                            							<li>•	Received First prize for designing a Line follower Robot at COGNIGENCE'10 </li>
+										<li>•	Organized an event for COGNIZANCE'09, a National Level Technical Symposium</li>
+                        						</ul>
 								</div>
-							</div>
-						</div>
+                    					</div>
+    						</div>
 						<div class="col s12 m6 l4">
       							<div class="item-inner">
 								<h3 class="degree"><b>IELTS</b></h3>
