--- a/index.html
+++ b/index.html
@@ -96,23 +96,17 @@
 					<div class="row">
 						<div class="col s12 m6 l4">
       							<div class="item-inner">
-                        					<h3 class="degree"><b>Bachelor of Technology</b></h3>
+                        					<h3 class="degree"><b>Master of Sceince</b></h3>
 								<div class="course">
-                            						Computer Science Engineering
+                            						Computer Science
                         					</div>
                         					<div class="education-body">
-                            						Jawaharlal Nehru Technologcal University, Hyderabad.
+                            						University of Houston-Clear Lake, Houston, Texas-77058
                         					</div><!--//education-body-->
-                        					<div class="time">2007 - 2011</div>
-                        					<div class="desc">
-									<ul>
-                            							<li>•	Received First prize for designing a Line follower Robot at COGNIGENCE'10 </li>
-										<li>•	Organized an event for COGNIZANCE'09, a National Level Technical Symposium</li>
-                        						</ul>
-								</div>
+                        					<div class="time">2017 - 2019</div>
                     					</div>
     						</div>
-						<div class="col s12 m6 l4">
+						<!--<div class="col s12 m6 l4">
       							<div class="item-inner">
 								<h3 class="degree"><b>IELTS</b></h3>
 								<div class="education-body">
@@ -125,7 +119,7 @@
 									Writing: 6.0
 								</div>
 							</div>
-						</div>
+						</div>-->
 
     					</div>
  					 <div class="row">
@@ -386,25 +380,28 @@
 					<h5 class="center-align-text education-body">Secondary Skills</h5><br>
 					<div class="row">
 						<div class="col s12 center-align-text">
+							<span class="chip">Micro Services</span>
+							<span class="chip">Amazon Web Services</span>
 							<span class="chip">DevOps Tools</span>
                    					<span class="chip">Agile Methodologies</span>
+							<br>
                     					<span class="chip">SQL</span>
                     					<span class="chip">PL SQL</span>
                     					<span class="chip">Mongo DB</span>
-                    					<br>
+                    					
                     					<span class="chip">Angular JS</span>
-                    					<span class="chip">GIT</span>
+                    					<span class="chip">GitHub</span>
                    					<span class="chip">Spring</span>
                     					<span class="chip">Struts</span>
                     					<span class="chip">Hibernate</span>
 						</div>
 					</div>
 					<br>
-					<h5 class="center-align-text education-body">Frame works, Servers, Tools</h5><br>
+					<h5 class="center-align-text education-body">Servers, Tools</h5><br>
 						<div class="row">
 						<div class="col s12 center-align-text">
-							<span class="chip">Weblogic server</span>
-                   					<span class="chip">Tomcat server</span>
+							<span class="chip">Weblogic</span>
+                   					<span class="chip">Apache Tomcat</span>
                     					<span class="chip">MAVEN</span>
                     					<span class="chip">Selenium Automation</span>
 						</div>
