--- a/index.html
+++ b/index.html
@@ -94,7 +94,19 @@
 			<div class="card-content">
 				<div class="container-fluid">
 					<div class="row">
-						<div class="col s12 m6 l4">
+						<div class="col s12 m12 l4">
+      							<!--<div class="item-inner">
+                        					<h3 class="degree"><b>Master of Sceince</b></h3>
+								<div class="course">
+                            						Computer Science
+                        					</div>
+                        					<div class="education-body">
+                            						University of Houston-Clear Lake, Houston, Texas-77058
+                        					</div>
+                        					<div class="time">2017 - 2019</div>
+                    					</div>-->
+    						</div>
+						<div class="col s12 m12 l4">
       							<div class="item-inner">
                         					<h3 class="degree"><b>Master of Sceince</b></h3>
 								<div class="course">
@@ -104,8 +116,10 @@
                             						University of Houston-Clear Lake, Houston, Texas-77058
                         					</div><!--//education-body-->
                         					<div class="time">2017 - 2019</div>
+								<div class="time">GPA: 3.89 / 4.00</div>
                     					</div>
     						</div>
+						<div class="col s12 m12 l4"></div>
 						<!--<div class="col s12 m6 l4">
       							<div class="item-inner">
 								<h3 class="degree"><b>IELTS</b></h3>
@@ -133,6 +147,7 @@
                             						Jawaharlal Nehru Technologcal University, Hyderabad.
                         					</div><!--//education-body-->
                         					<div class="time">2007 - 2011</div>
+								<div class="time">GPA: 3.62/4.00</div>
                         					<div class="desc">
 									<ul>
                             							<li>•	Received First prize for designing a Line follower Robot at COGNIGENCE'10 </li>
