--- a/index.html
+++ b/index.html
@@ -480,8 +480,10 @@
       						<p>I'm Interested in the profiles</p>
                     				<ul>
 							<li>•	Full Stack Developer</li>
+							<li>•	Web Application Development</li>
+							<li>•	UI Developer</li>
 							<li>•	Automation Testing</li>
-							<li>•	Research</li>
+							
 						</ul>
                     				<br>
 						<p>If you want any of the profiles, please feel free to drop me a line !</p>
@@ -491,17 +493,17 @@
 					<div class="col s12">
 						<div class="center-align-text">
 							<p>Nagarjuna Kuppala</p>
-                    					<p>Apt #1903, Cove Apartments, 2001 Gemini Street, Houston, Texas-77058</p><i class="fa fa-phone"><span class="iconLabel">(346)400-6295</span></i>
+                    					<p>Apt #1903, Cove Apartments, 2001 Gemini Street, Houston, Texas-77058</p><i class="fa fa-phone"><span class="iconLabel">(281)508-8331</span></i>
                     					<br>
                         
                     					<i class="fa fa-envelope-o email" aria-hidden="true"><a class="mail" href="mailto:nagarjunakuppala07@gmail.com"><span class="iconLabel">nagarjunakuppala07@gmail.com</span></a></i>
 							<br><br>
 							<div class="resume">
-                        					<a href="https://drive.google.com/open?id=0B0CyErOY_eOBY3lJbzNTbVN0QWM" target="_blank"><span class="resume">Resume</span></a>
+                        					<a href="https://drive.google.com/open?id=1J8cqyW-Ti1RnHYGmB08-IzooWu99Pa-B" target="_blank"><span class="resume">Resume</span></a>
                     					</div>
                     					<br>
                     					<div class="degree" id="degree">
-                        					<p><a href="https://drive.google.com/open?id=0B0CyErOY_eOBY3lJbzNTbVN0QWM" target="_blank">Infographic Resume</a></p>
+                        					<p><a href="https://drive.google.com/open?id=1J8cqyW-Ti1RnHYGmB08-IzooWu99Pa-B" target="_blank">Infographic Resume</a></p>
                     					</div>
 							<div class="icons">
                         					<ul class="social-network social-circle">
