--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				
 				</div>
 				<div class="col s12 m8 offset-m2 l8 offset-l2 center-align">
-					<p>Experienced Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Java, SQL, PL&SQL, Oracle Database, AngularJS, DevOPs, Webservices, Spring and Agile Methodologies. Strong engineering professional with a Bachelor of Technology (B.Tech.) focused in Computer Science and Engineering from JawaharLal Nehru Technological University, Hyderabad.</p>
+					<p>Experienced Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Java, SQL, PL&SQL, Oracle Database, AngularJS, DevOPs, Webservices, Spring and Agile Methodologies. Strong engineering professional persuing a Master of Science focused in Computer Science from University of Houston- Clear Lake, Houston, United States-77058</p>
 
 					<br>
 				</div>
