--- a/index.html
+++ b/index.html
@@ -271,13 +271,40 @@
 			<div class="row">
 				<div class="col s12">
 					<ul class="tabs">
-    						<li class="tab col s3"><a class="active" href="#posIoT">Point of Sale- IoT</a></li>
+						<li class="tab col s3"><a class="active" href="#hcm">HCM</a></li>
+						<li class="tab col s3"><a href="#movieFlex">MovieFlex</a></li>
+    						<li class="tab col s3"><a href="#posIoT">Point of Sale- IoT</a></li>
    						<li class="tab col s3"><a href="#posWS">Point of Sale-Webservices</a></li>
    						<li class="tab col s3"><a href="#eTrans">eTrans</a></li>
     						<li class="tab col s3"><a href="#eRating">eRating</a></li>
   					</ul>
 				</div>
   				<br>
+				<div id="hcm" class="col s12">
+      					HCM Health Care Management system is developed based on the MEAN stack(MongoDB, Express JS, Angular2, Node JS). 
+
+					<br><strong>Contribution	:</strong><br>
+					<ul style="list-style-type:circle">
+  						<li>•	Developed admin module, where admin can manage doctors, advertisements and other admins</li>
+  						<li>•	Created doctor module, he can manage his patients, manage appointments, manage prescriptions</li>
+  						<li>•	Developed patient module, Patient can make appointments, manage his profile. </li>
+						<li>•	Registration module for all other activities like password management(forgot password, reset password, account activation, resend account activation link)</li>
+						<li>•	provided security to the POST/PUT/DELETE services from backend </li>
+						<li>•	<i>Technologies Used: Angular 2, Node JS, RESTful web services, Mongo DB, HTML</i></li>
+					</ul>	
+    				</div>
+				<div id="movieFlex" class="col s12">
+      					Movie Flex is a web application based on the micro services concept. This project has two modules Admin and User. Admin can add, edit and delete movies. User can view the movie information, add reviews, delete review, add rating, select his personalized interested movies.
+
+					<br><strong>Contribution	:</strong><br>
+					<ul style="list-style-type:circle">
+  						<li>•	Built Admin module (admin can Add, Edit, Delete registered users and movies) using Microservices.</li>
+  						<li>•	Created an interactive UI using HTML and Thymeleaf for User Registration, view movie details and reviews/comments modules.</li>
+  						<li>•	Implemented AJAX validations </li>
+						<li>•	 </li>
+						<li>•	<i>Technologies Used: Spring boot, Microservices, Oracle SQL, Thymeleaf, AJAX, HTML</i></li>
+					</ul>	
+    				</div>
 				<div id="posIoT" class="col s12">
       						<p>The internet of Things is the internetworking of physical devices, vehicles (also referred as Connected Devices and Smart Devices), buildings and other items- embedded with electronics, software, sensors and network connectivity that enable these  objects to collect.  This IoT project enabled for B2B customers with different third party vendors like Mobile Iron, Grid Wide, VZ Share, Intelligent Hospital and etc. with different services like Device with Service, Software, Professional Services, Hardware only. </p>
 						<br><strong>Contribution	:</strong><br>
