--- a/index.html
+++ b/index.html
@@ -273,8 +273,8 @@
 					<ul class="tabs">
 						<li class="tab col s3"><a class="active" href="#hcm">HCM</a></li>
 						<li class="tab col s3"><a href="#movieFlex">MovieFlex</a></li>
-    						<li class="tab col s3"><a href="#posIoT">Point of Sale- IoT</a></li>
-   						<li class="tab col s3"><a href="#posWS">Point of Sale-Webservices</a></li>
+    						<li class="tab col s3"><a href="#posIoT">POS</a></li>
+   						<li class="tab col s3"><a href="#posWS">POS</a></li>
    						<li class="tab col s3"><a href="#eTrans">eTrans</a></li>
     						<li class="tab col s3"><a href="#eRating">eRating</a></li>
   					</ul>
