--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 
 		<div class="card" id="work"><br>
-			<h5 class="center-align">Work Experiences</h5><br><br>
+			<h5 class="center-align">Work Experience</h5><br><br>
 			<section id="experiences-section" class="experiences-section section">
             
             <div class="timeline">
